Adds Scripted configuration. Also adds a basic scripted test